Commit commit commit
Makin’ that shit HTML 4.01 Strict compliant, for some stupid reason #why

--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
     <head>
         <title>About | Zack Tedders</title>
-        <meta charset="utf-8">
+        <META http-equiv="Content-Type" content="text/html;charset=ISO- 8859-1">
         <meta name="description" content="">
         <meta name="keywords" content="">
         <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -17,17 +17,18 @@
                 <span class="nav-sidebar">
                  <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li>About</li>
+                    <li><strong>About</strong></li>
                     <li><a href="projects.html">Current Projects</a></li>
-                    <li><a href="goals.html">Learning Goals</a></li>
-                    <li><a href="resume.html">Resume</a></li>
                 </ul>
                 </span>
             </div>
             <div class="content">
                 <p class="section-head">About Me</p>
-                <p class="section-text">Currently, I'm a fourth-year student at the University of Georgia studying Mass Media Arts. The program focuses on video production and media content creation, as well as the related skills and techniques required.</p>
-                <p class="section-text">Cum ne quidam expetenda tincidunt! Ut eos dolore adipisci, ex usu minimum consulatu contentiones? Quas definitiones ne pro, pertinax scribentur ei eum. His aperiri appetere ut, has harum liberavisse ex.</p>
+                <span id="author-pic"><img src="img/self.jpg" alt="Picture of Self" width="250px" height="250px"></span>
+                <p class="section-text">Currently, I'm a fourth-year student at the University of Georgia studying Mass Media Arts. The program focuses on video production and media content creation, as well as the related skills and techniques required. I'm also taking courses in Italian and the New Media Institute &mdash; a certificate program within Grady College dedicated to researching new technologies and finding interesting and innovative ways to implement them.</p>
+                <p class="section-text">After I graduate, I'd like to work for a movie/television production company in some production aspect, though I wouldn't eliminate the possibility of developing apps in some way in the future. After diving deep into Apple's Swift programming language, I've found it much simpler and easier to understand than previous languages I've tackled.</p>
+                <p class="section-text">Thanks for visiting my page! I really appreciate it. If you have any questions about anything you see here, feel free to <a href="mailto:ztedders@uga.edu">email me</a>!</p>
+                <hr>
             </div>
         </div><!-- allcontent ends here -->
     </body>
