--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
     <head>
         <title>Home - Zack Tedders</title>
-        <meta charset="UTF-8">
+        <META http-equiv="Content-Type" content="text/html;charset=ISO- 8859-1">
         <meta name="description" content="">
         <meta name="keywords" content="">
         <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -15,17 +15,16 @@
             <div class="sidebar">
                 <span class="nav-sidebar">
                 <ul>
+                    <li><strong>Home</strong></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="projects.html">Current Projects</a></li>
-                    <li><a href="goals.html">Learning Goals</a></li>
-                    <li><a href="resume.html">Resume</a></li>
                 </ul>
                 </span>
             </div>
             <div class="content">
-                <p>Welcome to my page!</p>
-                <p>Nothing here yet, but I'm sure you'll find something interesting soon!</p>
-                <!-- <img class="" src="" alt=""> -->
+                <span id="author-pic"><img src="img/palmtree.jpg" alt="Palm trees at Disney in Florida"></span>
+                <p><strong>Welcome to my page!</strong></p>
+                <p class="section-text">Thanks for visiting! My name is <strong>Zack Tedders</strong>, and this is my website project for <strong>CSCI 1100L</strong> at the University of Georgia. Feel free to look around! If you're curious about me, check out the <a href="about.html">about page</a>, or take a look at some of the <a href="projects.html">current projects</a> I'm working on.</p>
             </div>
         </div><!-- End allcontent -->
     </body>
