--- a/projects.html
+++ b/projects.html
@@ -1,3 +1,53 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
+    <head>
+        <title>Current Projects | Zack Tedders</title>
+        <META http-equiv="Content-Type" content="text/html;charset=ISO- 8859-1">
+        <meta name="description" content="">
+        <meta name="keywords" content="">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link href='https://fonts.googleapis.com/css?family=Lobster|Lato:400,400italic,700' rel='stylesheet' type='text/css'>
+    </head>
+    <body>
+        <div class="allcontent"><!--Allcontent tag begin-->
+            <div class="header">
+                Current Projects
+            </div>
+            <div class="sidebar">
+                <span class="nav-sidebar">
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><strong>Current Projects</strong></li>
+                    </ul>
+                </span>
+            </div>
+            <div class="content">
+                <div id="table">
+                    <table>
+                        <tr>
+                            <th>Class</th>
+                            <th>Project</th>
+                            <th>Completion Date</th>
+                        </tr>
+                        <tr>
+                            <td>TELE 4250</td>
+                            <td>Short Film</td>
+                            <td>Last Day of Semester</td>
+                        </tr>
+                        <tr>
+                            <td>CSCI 1100</td>
+                            <td>Personal Website</td>
+                            <td>November 20, 2015</td>
+                        </tr>
+                        <tr>
+                            <td>NMIX 4310</td>
+                            <td>App Development</td>
+                            <td>December 4, 2015</td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </div><!--Allcontent ends here-->
+    </body>
 </html>
