Because someone can't type
“iso- “ is not the same as “iso-“, c’mon people

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>About | Zack Tedders</title>
-        <META http-equiv="Content-Type" content="text/html;charset=ISO- 8859-1">
+        <META http-equiv="Content-Type" content="text/html;charset=ISO-8859-1">
         <meta name="description" content="">
         <meta name="keywords" content="">
         <link rel="stylesheet" type="text/css" href="css/style.css">
